--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
+xcshareddata
 
 # Android/IntelliJ
 #
@@ -54,6 +55,7 @@ buck-out/
 
 # Bundle artifact
 *.jsbundle
+*.jsbundle.map
 
 # CocoaPods
 /ios/Pods/
