--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "7.5.0",
     "@babel/runtime": "7.5.0",
+    "@geekykaran/metro-code-splitting": "^1.0.2",
     "@react-native-community/eslint-config": "0.0.3",
     "babel-jest": "24.8.0",
     "eslint": "6.0.1",
